Generating the layout dynamically

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,162 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-
-
-    <ImageView
-        android:id="@+id/stock_image"
-        android:layout_width="35dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="16dp"
-        android:contentDescription="@string/stock_string"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.055" />
-
-    <ImageView
-        android:id="@+id/waste_image"
-        android:layout_width="39dp"
-        android:layout_height="60dp"
-        android:contentDescription="@string/waste_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
-        app:layout_constraintStart_toEndOf="@+id/stock_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058"
-        app:srcCompat="@drawable/blue_back" />
-
-    <ImageView
-        android:id="@+id/foundation_0"
-        android:layout_width="39dp"
-        android:layout_height="60dp"
-        android:contentDescription="@string/waste_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
-        app:layout_constraintStart_toEndOf="@+id/stock_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058"
-        app:srcCompat="@drawable/blue_back" />
-
-    <ImageView
-        android:id="@+id/foundation_1"
-        android:layout_width="39dp"
-        android:layout_height="60dp"
-        android:contentDescription="@string/waste_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toEndOf="@+id/stock_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058"
-        app:srcCompat="@drawable/blue_back" />
-
-    <ImageView
-        android:id="@+id/foundation_2"
-        android:layout_width="39dp"
-        android:layout_height="60dp"
-        android:contentDescription="@string/waste_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.641"
-        app:layout_constraintStart_toEndOf="@+id/stock_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058"
-        app:srcCompat="@drawable/blue_back" />
-
-    <ImageView
-        android:id="@+id/foundation_3"
-        android:layout_width="39dp"
-        android:layout_height="60dp"
-        android:contentDescription="@string/waste_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.797"
-        app:layout_constraintStart_toEndOf="@+id/stock_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058"
-        app:srcCompat="@drawable/blue_back" />
-
-    <ImageView
-        android:id="@+id/pile_0"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_1"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_0"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_2"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_3"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_4"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="4dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_5"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-    <ImageView
-        android:id="@+id/pile_6"
-        android:layout_width="42dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/pile_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pile_5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/purple_back" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:orientation="vertical"
+    android:id="@+id/layout"
+    tools:context=".MainActivity"/>
